Updated experiment script to run IBM.  Fixed configuration passing to application.
Fixed RealTimSearch parser to detect single arguments.

Updated ignore with IBM JVM output files.